--- a/app/views/years/show.html.erb
+++ b/app/views/years/show.html.erb
@@ -1,49 +1,73 @@
-<p id="notice"><%= notice %></p>
+<div class="col-md-6">
+  <div class="h-100 p-5 bg-light border rounded-3">
+    
+    <h2><%= @year.year_long_name %></h2>
 
+    <p>
+      Start Year:
+      <%= @year.year_start %>
+    <br/>
+      End Year:
+      <%= @year.year_end %>
+    <br/>
+      Short Name:
+      <%= @year.year_short_name %>
+    <br/>
+      Default:
+      <%= @year.default_ind %>
+    </p>
+
+    <%= link_to 'Edit', edit_year_path(@year), class:"btn btn-secondary" %>
+    <%= link_to 'Back', years_path, class:"btn btn-dark" %>
+
+  </div>
+</div>
+
+<!-- 
 <p>
   <strong>Auth account:</strong>
-  <%= @year.auth_account_id %>
+  <%# @year.auth_account_id %>
 </p>
 
 <p>
   <strong>Year start:</strong>
-  <%= @year.year_start %>
+  <%# @year.year_start %>
 </p>
 
 <p>
   <strong>Year end:</strong>
-  <%= @year.year_end %>
+  <%# @year.year_end %>
 </p>
 
 <p>
   <strong>Year short name:</strong>
-  <%= @year.year_short_name %>
+  <%# @year.year_short_name %>
 </p>
 
 <p>
   <strong>Year long name:</strong>
-  <%= @year.year_long_name %>
+  <%# @year.year_long_name %>
 </p>
 
 <p>
   <strong>Default ind:</strong>
-  <%= @year.default_ind %>
+  <%# @year.default_ind %>
 </p>
 
 <p>
   <strong>Status:</strong>
-  <%= @year.status_id %>
+  <%# @year.status_id %>
 </p>
 
 <p>
   <strong>Updated by:</strong>
-  <%= @year.updated_by %>
+  <%# @year.updated_by %>
 </p>
 
 <p>
   <strong>Created by:</strong>
-  <%= @year.created_by %>
+  <%# @year.created_by %>
 </p>
+-->
 
-<%= link_to 'Edit', edit_year_path(@year) %> |
-<%= link_to 'Back', years_path %>
+
