--- a/app/views/layouts/_alerts.html.erb
+++ b/app/views/layouts/_alerts.html.erb
@@ -1,4 +1,13 @@
 <div class="alert alert-warning alert-dismissible fade show" role="alert">
-  <%= notice %>
+  
+  <% if notice %>
+    <%= notice %>
+  <% end %>
+
+  <% if alert %>
+    <%= alert %>
+  <% end %>
+
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+
 </div>
