--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,12 +18,12 @@
   </head>
   <body>
     
-    <%= render 'home/header'  %>
+    <%= render 'home/header' %>
     
     <div class="container">
       
       <br/>
-      <% if notice %>
+      <% if notice || alert %>
         <%= render "layouts/alerts" %>
       <% end %>
       
