--- a/app/views/years/index.html.erb
+++ b/app/views/years/index.html.erb
@@ -1,9 +1,7 @@
-<p id="notice"><%= notice %></p>
+<h1>School Years</h1>
 
-<h1>Years</h1>
-
-<table>
-  <thead>
+<table class="table table-striped table-bordered table-hover">
+  <thead class="table-dark">
     <tr>
       <th>Auth account</th>
       <th>Year start</th>
@@ -14,7 +12,7 @@
       <th>Status</th>
       <th>Updated by</th>
       <th>Created by</th>
-      <th colspan="3"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
@@ -25,14 +23,13 @@
         <td><%= year.year_start %></td>
         <td><%= year.year_end %></td>
         <td><%= year.year_short_name %></td>
-        <td><%= year.year_long_name %></td>
+        <td><%= link_to year.year_long_name, year %></td>
         <td><%= year.default_ind %></td>
         <td><%= year.status_id %></td>
         <td><%= year.updated_by %></td>
         <td><%= year.created_by %></td>
-        <td><%= link_to 'Show', year %></td>
-        <td><%= link_to 'Edit', edit_year_path(year) %></td>
-        <td><%= link_to 'Destroy', year, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Edit', edit_year_path(year), class: "btn btn-outline-secondary btn-sm" %></td>
+        <td><%= link_to 'Delete', year, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-outline-danger btn-sm" %></td>
       </tr>
     <% end %>
   </tbody>
@@ -40,4 +37,4 @@
 
 <br>
 
-<%= link_to 'New Year', new_year_path %>
+<%= link_to 'Add New School Year', new_year_path, class:"btn btn-secondary" %>
