--- a/app/views/years/new.html.erb
+++ b/app/views/years/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Year</h1>
-
+<h1>Create New School Year</h1>
+<br/>
 <%= render 'form', year: @year %>
-
+<br/>
 <%= link_to 'Back', years_path %>
