--- a/app/views/years/index.html.erb
+++ b/app/views/years/index.html.erb
@@ -1,40 +1,44 @@
 <h1>School Years</h1>
 
-<table class="table table-striped table-bordered table-hover">
-  <thead class="table-dark">
-    <tr>
-      <th>Auth account</th>
-      <th>Year start</th>
-      <th>Year end</th>
-      <th>Year short name</th>
-      <th>Year long name</th>
-      <th>Default ind</th>
-      <th>Status</th>
-      <th>Updated by</th>
-      <th>Created by</th>
-      <th colspan="2"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @years.each do |year| %>
+<%=form_tag destroy_multiple_years_path, method: :delete do %>
+  <table class="table table-striped table-bordered table-hover">
+    <thead class="table-dark">
       <tr>
-        <td><%= year.auth_account_id %></td>
-        <td><%= year.year_start %></td>
-        <td><%= year.year_end %></td>
-        <td><%= year.year_short_name %></td>
-        <td><%= link_to year.year_long_name, year %></td>
-        <td><%= year.default_ind %></td>
-        <td><%= year.status_id %></td>
-        <td><%= year.updated_by %></td>
-        <td><%= year.created_by %></td>
-        <td><%= link_to 'Edit', edit_year_path(year), class: "btn btn-outline-secondary btn-sm" %></td>
-        <td><%= link_to 'Delete', year, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-outline-danger btn-sm" %></td>
+        <th>Auth account</th>
+        <th>Year start</th>
+        <th>Year end</th>
+        <th>Year short name</th>
+        <th>Year long name</th>
+        <th>Default ind</th>
+        <th>Status</th>
+        <th>Updated by</th>
+        <th>Created by</th>
+        <th></th>
+        <th><input type="checkbox" id="selectAll"></input></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @years.each do |year| %>
+        <tr>
+          <td><%= year.auth_account_id %></td>
+          <td><%= year.year_start %></td>
+          <td><%= year.year_end %></td>
+          <td><%= year.year_short_name %></td>
+          <td><%= link_to year.year_long_name, year %></td>
+          <td><%= year.default_ind %></td>
+          <td><%= year.status_id %></td>
+          <td><%= year.updated_by %></td>
+          <td><%= year.created_by %></td>
+          <td></td>
+          <td><%= check_box_tag "year_ids[]", year.id, false, class: 'selectable' %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <%= submit_tag "Delete selected", :class => 'btn btn-primary btn-xs' %>
+<% end %>
 
 <br>
-
 <%= link_to 'Add New School Year', new_year_path, class:"btn btn-secondary" %>
+
